# todoapp

./: .gitignore  README.md  alembic.ini  database.py  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 024248a861ff_initial_db.py  2f90632eccd1_create_phone_number_for_user_table.py
api/: admin.py  auth.py  todos.py  users.py
app/db/: database.py
routers/: admin.py  auth.py  auth_utils.py  todos.py  users.py
templates/: add-todo.html  change-user-password.html  edit-todo.html  home.html  layout.html  login.html  navbar.html  register.html
test/: test_admin.py  test_auth.py  test_example.py  test_main.py  test_todos.py  test_users.py  utils.py
